care/force-app/main/default/objects/Marketing_Solutions_Lead_Intake_Setting__mdt/Marketing_Solutions_Lead_Intake_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Marketing Solutions Lead Intake Setting</label>
    <pluralLabel>Marketing Solutions Lead Intake Settings</pluralLabel>
</CustomObject>