care/force-app/main/default/objects/Marketing_Solutions_Lead_Intake_Setting__mdt/fields/Email_Intro__c.field-meta.xml
<CustomField>
    <fullName>Email_Intro__c</fullName>
    <defaultValue>&apos;The following Account has a lead intake:&apos;</defaultValue>
    <label>Email Intro</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>