care/force-app/main/default/objects/Marketing_Solutions_Lead_Intake_Setting__mdt/fields/Owner_Username__c.field-meta.xml
<CustomField>
    <fullName>Owner_Username__c</fullName>
    <inlineHelpText>The username of the user that should be assigned new lead accounts when they are created by the intake endpoint.</inlineHelpText>
    <label>Owner Username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>