care/force-app/main/default/objects/Marketing_Solutions_Lead_Intake_Setting__mdt/fields/Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>Task_Subject__c</fullName>
    <defaultValue>&apos;Inbound Followup&apos;</defaultValue>
    <inlineHelpText>The value to use as the Subject for the assigned task.</inlineHelpText>
    <label>Task Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>